# nostalgia

./: README.MD  pyproject.toml
api/: serializers.py  urls.py  views.py
base/: models.py
base/migrations/: 0001_initial.py
nostalgia/: settings.py  urls.py
